# kubetui

./: README.md  api__v1_openapi.json  generate_models.py  pyproject.toml
generated_openapi_v3/io/k8s/api/authentication/: v1.py
generated_openapi_v3/io/k8s/api/autoscaling/: __init__.py  v1.py
generated_openapi_v3/io/k8s/api/core/: v1.py
generated_openapi_v3/io/k8s/api/policy/: v1.py
generated_openapi_v3/io/k8s/apimachinery/pkg/: runtime.py
generated_swagger/: __init__.py
generated_swagger/io/k8s/api/admissionregistration/: v1.py  v1alpha1.py
generated_swagger/io/k8s/api/apiserverinternal/: v1alpha1.py
generated_swagger/io/k8s/api/apps/: v1.py
generated_swagger/io/k8s/api/authentication/: v1.py  v1alpha1.py
generated_swagger/io/k8s/api/authorization/: v1.py
generated_swagger/io/k8s/api/autoscaling/: v1.py  v2.py
generated_swagger/io/k8s/api/batch/: v1.py
generated_swagger/io/k8s/api/certificates/: v1.py
generated_swagger/io/k8s/api/coordination/: v1.py
generated_swagger/io/k8s/api/core/: v1.py
generated_swagger/io/k8s/api/discovery/: v1.py
generated_swagger/io/k8s/api/events/: v1.py
generated_swagger/io/k8s/api/flowcontrol/: v1beta2.py  v1beta3.py
generated_swagger/io/k8s/api/networking/: v1.py  v1alpha1.py
generated_swagger/io/k8s/api/node/: v1.py
generated_swagger/io/k8s/api/policy/: v1.py
generated_swagger/io/k8s/api/rbac/: v1.py
generated_swagger/io/k8s/api/resource/: __init__.py  v1alpha1.py
generated_swagger/io/k8s/api/scheduling/: v1.py
kubetui/: main.py
kubetui/commands/: get.py
kubetui/models/: api_v1.py
(+12 files in other folders)
