[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Michaël de Vries"]
readme = "README.md"
packages = [{include = "kubetui"}]

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "*"
typer-cli = "*"
typer = {version="*", extras=["all"]}
datamodel-code-generator = {extras = ["http"], version = "^0.14.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"